# MyStuff

./: README.md  candp.sh  imdbpytest.py  instructions.nt  instructions.txt  iterations.py  notes.nt
.metadata/: version.ini
Artwork/: README.md
C/sdl-foobar/: aclocal.m4  config.h.in  configure
C/sdl-foobar/src/: Makefile.am  main.c~
C/sdl_animation/: sdl_animation
CPP/foobar-cpp/: .anjuta_sym_db.db
Cpp/HelloCodeBlocks/: HelloCodeBlocks.cbp  main.cpp
DDGAME/: input.cpp
DDGAME/Debug/: game.d  graphics.d  main.d  makefile  sprite.d  subdir.mk
DDLC/: DDLC.project  DDLC.workspace  Makefile  input.h
DDLC/.codelite/: DDLC.session  compilation.db  compile_commands.json
DDLC/Debug/: DDLC  game.cpp.o.d  input.cpp.o.d  main.cpp.o.d  sprite.cpp.o.d
Django/mysite/: db.sqlite3
Donald Duck Letter Catch/: main.cpp
Faust/: noise  noise.dsp  untitled_scene.fsc  ~untitled_scene.fsc
Jupyter/: Intro Notebook.ipynb
PHP/: phptest.php
Python/: bsort.py
Rack/MyPlugin/: plugin.json
Ruby/: 2dapp.rb  demo-a.rb  gem-environment.txt  hello.rb  testray.rb
Test_Project/: CMakeLists.txt  Test_Project.kdev4
Test_Project/.kdev4/: Test_Project.kdev4
Unity/: readme.md
Unity/DDGAME/: .cproject  .project  game.cpp
Unity/DDLC/: DDLC.mk  DDLC.txt  game.cpp  graphics.cpp
bash/: sound-restart.sh
hello/: a.out  hello.cpp
html/: htmltemplate.txt  newVue.html
js/: newVue.html
php/: phptest.php
python/: linuxpython.py
reddit_challenges/: README  README.md
sdl-foobar/: .anjuta_sym_db.db  Makefile.in  configure.ac
udacity/: readme
udacity/rwd/: readme
(+191 files in other folders)
